Issue #3227944 by smulvih2: Status message layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,12 @@
 .alert-sm {
   padding: 5px 10px; }
 
+.alert-dismissible button.close {
+  right: 15px; }
+
+.alert-dismissible > p {
+  padding-top: 15px; }
+
 .alert a {
   font-weight: bold; }
 
